[gd_scene load_steps=31 format=3 uid="uid://dngsha1alapwx"]

[ext_resource type="PackedScene" path="res://Player.tscn" id="1"]
[ext_resource type="PackedScene" path="res://Camera.tscn" id="2"]
[ext_resource type="PackedScene" uid="uid://bvdy286lnsw1j" path="res://FloatingIsland.tscn" id="3"]
[ext_resource type="PackedScene" path="res://Sun.tscn" id="4"]
[ext_resource type="Script" path="res://World.gd" id="5"]
[ext_resource type="PackedScene" path="res://GrowingRoot.tscn" id="6"]
[ext_resource type="Script" path="res://CameraRotater.gd" id="7"]
[ext_resource type="PackedScene" path="res://WaterCollectible.tscn" id="8"]
[ext_resource type="PackedScene" uid="uid://cbww4twx32g53" path="res://MirrorCollectible.tscn" id="9"]
[ext_resource type="Script" path="res://FadeScreen.gd" id="10"]
[ext_resource type="PackedScene" path="res://SeedCollectible.tscn" id="11"]
[ext_resource type="PackedScene" uid="uid://lh5yqn6ghqwq" path="res://Menu.tscn" id="12"]
[ext_resource type="PackedScene" path="res://Reflection.tscn" id="13"]
[ext_resource type="Theme" path="res://Ui.theme" id="14"]
[ext_resource type="Script" path="res://MessageBox.gd" id="15"]
[ext_resource type="AudioStream" uid="uid://cmito0qjvy1nl" path="res://music/music.mp3" id="16"]
[ext_resource type="Environment" uid="uid://b8q1518ms64d1" path="res://DefaultEnvironment.tres" id="17"]
[ext_resource type="PackedScene" path="res://HappyEnd.tscn" id="18"]

[sub_resource type="Animation" id="1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.815686, 0.643137, 0.180392, 0)]
}

[sub_resource type="Animation" id="2"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.815686, 0.643137, 0.180392, 1), Color(0.815686, 0.643137, 0.180392, 0)]
}

[sub_resource type="Animation" id="3"]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.815686, 0.643137, 0.180392, 0), Color(0.815686, 0.643137, 0.180392, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7dw5w"]
_data = {
"RESET": SubResource("1"),
"fade_in": SubResource("2"),
"fade_out": SubResource("3")
}

[sub_resource type="Animation" id="6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="8"]
resource_name = "hide_message_anim"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="7"]
resource_name = "show_message_anim"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qlabx"]
_data = {
"RESET": SubResource("6"),
"hide_message_anim": SubResource("8"),
"show_message_anim": SubResource("7")
}

[sub_resource type="Animation" id="4"]
resource_name = "MenuFadeIn"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Menu:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Menu:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}

[sub_resource type="Animation" id="5"]
resource_name = "MenuFadeOut"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Menu:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Menu:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="9"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Menu:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fj0pb"]
_data = {
"MenuFadeIn": SubResource("4"),
"MenuFadeOut": SubResource("5"),
"RESET": SubResource("9")
}

[node name="World" type="Node3D"]
script = ExtResource("5")
RootScene = ExtResource("6")
WaterCollectibleScene = ExtResource("8")
MirrorCollectibleScene = ExtResource("9")
ReflectionScene = ExtResource("13")

[node name="Menu" parent="." instance=ExtResource("12")]
process_mode = 2
process_priority = 3
grow_horizontal = 2
grow_vertical = 2

[node name="Player" parent="." instance=ExtResource("1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.235989, 0, 0)
cam = NodePath("../Camera3D")

[node name="Camera3D" parent="." instance=ExtResource("2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0319281, 15)
Target = NodePath("../Player")
offset = Vector3(0, 5, 15)

[node name="Sun" parent="." groups=["Water_and_Light"] instance=ExtResource("4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -223.696, -3.96483, -3.55683)

[node name="CameraRotaterY" type="Node3D" parent="."]
script = ExtResource("7")

[node name="CameraRotaterX" type="Node3D" parent="CameraRotaterY"]

[node name="Camera2" type="Camera3D" parent="CameraRotaterY/CameraRotaterX"]
transform = Transform3D(1, 0, 0, 0, 0.593967, 0.80449, 0, -0.80449, 0.593967, 0, 186.367, 132.763)
far = 1000.0

[node name="IngameOverlay" type="CanvasLayer" parent="."]
script = ExtResource("10")

[node name="ColorRect" type="ColorRect" parent="IngameOverlay"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color(0.815686, 0.643137, 0.180392, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="IngameOverlay"]
libraries = {
"": SubResource("AnimationLibrary_7dw5w")
}

[node name="MessageBox" type="CenterContainer" parent="IngameOverlay"]
visible = false
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -242.0
script = ExtResource("15")

[node name="ColorRect" type="ColorRect" parent="IngameOverlay/MessageBox"]
custom_minimum_size = Vector2(800, 200)
layout_mode = 2
color = Color(0, 0, 0, 0.352941)

[node name="Label" type="Label" parent="IngameOverlay/MessageBox/ColorRect"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 15.0
offset_right = -15.0
offset_bottom = -15.0
theme = ExtResource("14")
text = "Example Text"

[node name="AnimationPlayer" type="AnimationPlayer" parent="IngameOverlay/MessageBox"]
libraries = {
"": SubResource("AnimationLibrary_qlabx")
}

[node name="MirrorCollectible0" parent="." instance=ExtResource("9")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 83.1815, 0, -36.7048)
ReflectionPath = NodePath("../Reflection0")

[node name="MirrorCollectible1" parent="." instance=ExtResource("9")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -71.6785, 0, -70.0742)
ReflectionPath = NodePath("../Reflection1")

[node name="MirrorCollectible2" parent="." instance=ExtResource("9")]
transform = Transform3D(1, 0, 0, 0, 0.585043, 0.811003, 0, -0.811003, 0.585043, -81.0738, 63.3101, 15.7791)
ReflectionPath = NodePath("../Reflection2")

[node name="MirrorCollectible3" parent="." instance=ExtResource("9")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -69.7347, 89.5524, 92.2372)
ReflectionPath = NodePath("../Reflection3")

[node name="MirrorCollectible4" parent="." instance=ExtResource("9")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.80765, 0, 112.972)
ReflectionPath = NodePath("../Reflection4")

[node name="MirrorCollectible5" parent="." instance=ExtResource("9")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 94.5206, 16.7271, 70.8549)
ReflectionPath = NodePath("../Reflection5")

[node name="floating_island" parent="." instance=ExtResource("3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 89.5607)

[node name="floating_island2" parent="." instance=ExtResource("3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -80.2007, -33.3448, 38.15)

[node name="floating_island6" parent="." instance=ExtResource("3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8.92628, 14.8849, 29.0787)

[node name="floating_island7" parent="." instance=ExtResource("3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8.92628, -75.6404, 29.0787)

[node name="floating_island8" parent="." instance=ExtResource("3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 60.4211, -46.9, 9.46843)

[node name="floating_island9" parent="." instance=ExtResource("3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 34.2016, 69.2883, 9.46843)

[node name="floating_island10" parent="." instance=ExtResource("3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -56.7954, 58.492, 9.46843)

[node name="floating_island11" parent="." instance=ExtResource("3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -56.7954, 75.9717, 72.1895)

[node name="floating_island3" parent="." instance=ExtResource("3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -55.0095, 0, -53.8753)

[node name="floating_island4" parent="." instance=ExtResource("3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 60.6647, 0, -37.9379)

[node name="floating_island5" parent="." instance=ExtResource("3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 74.5956, 16.2554, 55.3668)

[node name="WaterCollectible" parent="." instance=ExtResource("8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 46.1019, 0, -52.148)

[node name="WaterCollectible7" parent="." instance=ExtResource("8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -85.7583, 0, -52.2378)

[node name="WaterCollectible2" parent="." instance=ExtResource("8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 36.6036, 88.6515, 3.8006)

[node name="WaterCollectible3" parent="." instance=ExtResource("8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -9.07692, 36.6043, 32.3104)

[node name="WaterCollectible4" parent="." instance=ExtResource("8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -101.41, -34.0918, 47.5372)

[node name="WaterCollectible5" parent="." instance=ExtResource("8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -54.7574, 52.2476, -53.543)

[node name="WaterCollectible6" parent="." instance=ExtResource("8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 81.2462, 32.9807, 67.5766)

[node name="SeedCollectible0" parent="." instance=ExtResource("11")]
transform = Transform3D(0.187621, 0.981132, 0.0466809, 0, 0.0475249, -0.99887, -0.982241, 0.187409, 0.00891668, 76.1661, 1.06145, -42.1156)
current_island = NodePath("../floating_island4")

[node name="SeedCollectible1" parent="." instance=ExtResource("11")]
transform = Transform3D(-0.238093, 0.970145, 0.0461582, 0, 0.0475249, -0.99887, -0.971242, -0.237824, -0.0113154, 5.26892, 16.18, 21.5451)
current_island = NodePath("../floating_island6")

[node name="SeedCollectible2" parent="." instance=ExtResource("11")]
transform = Transform3D(-0.999571, 0.00595236, 0.0286562, -0.0107531, 0.835938, -0.54872, -0.0272206, -0.548793, -0.835516, 75.9204, 29.4685, 46.3685)
current_island = NodePath("../floating_island5")

[node name="SeedCollectible3" parent="." instance=ExtResource("11")]
transform = Transform3D(-0.0629787, -0.870229, -0.488604, 0.0158811, 0.488641, -0.872341, 0.997888, -0.0626987, -0.0169534, 19.2239, 76.6373, 10.9312)
current_island = NodePath("../floating_island9")

[node name="SeedCollectible4" parent="." instance=ExtResource("11")]
transform = Transform3D(-0.770825, 0.614962, 0.166286, 0, 0.261027, -0.965332, -0.637048, -0.744102, -0.201206, -47.5181, 84.5627, 62.4937)
current_island = NodePath("../floating_island11")

[node name="SeedCollectible5" parent="." instance=ExtResource("11")]
transform = Transform3D(-0.829576, 0.345097, -0.438991, 0.480057, 0.0392048, -0.876361, -0.285219, -0.937748, -0.198189, -47.6959, 57.2528, -3.59112)
current_island = NodePath("../floating_island10")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_fj0pb")
}

[node name="Reflection0" parent="." instance=ExtResource("13")]
visible = false

[node name="Reflection1" parent="." instance=ExtResource("13")]
visible = false

[node name="Reflection2" parent="." instance=ExtResource("13")]
visible = false

[node name="Reflection3" parent="." instance=ExtResource("13")]
visible = false

[node name="Reflection4" parent="." instance=ExtResource("13")]
visible = false

[node name="Reflection5" parent="." instance=ExtResource("13")]
visible = false

[node name="RootCamera" type="Camera3D" parent="."]
far = 1000.0

[node name="MusicStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("16")
volume_db = -20.411
autoplay = true

[node name="MenuCamera" type="Camera3D" parent="."]
transform = Transform3D(0.0997649, 0.0879903, 0.991113, -0.00881252, 0.996121, -0.0875479, -0.994972, 0, 0.100153, 38.7791, -7.76529, -10.662)
current = true
far = 1000.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource("17")

[node name="HappyEnd" parent="." instance=ExtResource("18")]
